@@ -59,7 +59,7 @@
        Zcl_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
        Zcl_E : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
      Zndex_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Zndex_E : //z 2015-05-19 16:08:05 L.226'28315 T2808751161.K ~170 +----+----+----+----+----+
+     Zndex_E : //z 2015-05-20 17:46:37 L.225'22403 T1437156793.K ~181 +----+----+----+----+----+
      TimeCnt : //z 2015-05-13 12:38:40 L.232'40880 T1534596209.K ~9   +----+----+----+----+----+
      Reg.Cnt : //z 2015-05-19 16:07:36 L.226'28344 T2808715324.K ~13  +----+----+----+----+----+
      #13  R+ : //z 2015-05-19 16:07:36 L.226'28344 T2808715324.K ~13    V+.179  L+.227  
@@ -76,7 +76,8 @@
      #2   R+ : //z 2015-04-27 11:31:41 L.248'44899 T1419899214.K ~2     V+.19   L+.104  
      #1   R+ : //z 2015-04-27 11:28:08 L.248'45112 T1418964727.K ~1     V+.3    L+.62   
      File.Op : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Version : //z 2015-05-19 16:08:05 L.226'28315 T2808751161.K ~183   R+.13   L+.228  --+----+
+     Version : //z 2015-05-20 17:46:37 L.225'22403 T1437156793.K ~194   R+.13   L+.231  --+----+
+     #10  V+ : //z 2015-05-20 17:38:06 L.225'22914 T1436042646.K ~190   R+.13   L+.229  
      #9   R+ : //z 2015-05-19 16:07:36 L.226'28344 T2808715324.K ~179   R+.13   L+.228  V+.179  
      #9   R+ : //z 2015-05-13 13:48:24 L.232'36696 T2827250037.K ~174   R+.12   L+.222  V+.174  
      #9   V+ : //z 2015-05-13 12:39:24 L.232'40836 T1534632084.K ~171   R+.11   L+.212  
@@ -226,4 +227,5 @@ http://tex.loria.fr/prod-graph/zoonekynd/metapost/metapost.html
 #region 05-19 16:07 R#.13   @zlog hosts
 01. 
 git clone https://github.com/racaljk/hosts.git hosts_racaljk
+2015-05-20 17:38 zkz Moving from Research to Practice to Close the Achievement Gap
 #endregion //z 2015-05-19 16:07:36 L.226'28344 BG57IV3@XCL T2808715324.K.F4146951713-+----+----+
