@@ -859,3 +859,14 @@ Changes to be committed:
 	modified:   History.txt
 	modified:   ncftp-1.9.5/util.c
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+D.End.2015/05/20.17_47_12.69.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   Doc/K/T.2015.BugFree.cs
+	modified:   History.txt
+
